# veilrend2d

./: CMakeLists.txt  LICENSE  justfile
cmake/: pkg.cmake
include/: CMakeLists.txt
include/engine/: CMakeLists.txt
include/engine/include/core/: entity.hpp  gameobject.hpp  gameobjects.hpp  object.hpp  window.hpp
include/engine/include/core/components/: component.hpp  vtransform.hpp  vtransform_system.hpp
include/engine/include/core/scene/: scene.hpp  scenemanager.hpp
include/engine/include/core/scenes/: scene.hpp  scenemanager.hpp
include/engine/include/ecs/: componentpool.hpp  entity.hpp
include/engine/include/engine/: program.hpp
include/engine/include/interface/: idrawable.hpp  iupdateable.hpp
include/engine/include/systems/: physics.hpp  textures.hpp
include/engine/src/: component.cpp  entity.cpp  gameobject.cpp  idrawable.cpp  iupdateable.cpp  object.cpp  physicssystem.cpp  program.cpp  scene.cpp  scenemanager.cpp  texturesystem.cpp  vtransform.cpp  window.cpp
include/util/: CMakeLists.txt
include/util/include/: types.hpp
include/util/include/math/: gmath.hpp
include/util/src/: gmath.cpp
src/: game.cpp  game.hpp  main.cpp  program.cpp  program.hpp
src/scenes/: testscene.cpp  testscene.hpp
